--- a/styles.css
+++ b/styles.css
@@ -115,3 +115,31 @@ body {
   padding: 8px 32px;
   border-radius: 10px;
 }
+
+.features {
+  text-align: center;
+  margin: 90px 0;
+}
+
+.features-heading {
+  margin-bottom: 40px;
+}
+
+.cards {
+  display: flex;
+  gap: 40px;
+  justify-content: center;
+}
+
+.card {
+  width: 160px;
+}
+
+.card img {
+  border: 4px solid #3882f6;
+  border-radius: 14px;
+}
+
+.card p {
+  color: #4c5664;
+}
