--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;0,900;1,300&display=swap");
 
 * {
   box-sizing: border-box;
@@ -151,6 +151,7 @@ body {
 }
 
 .quote-text {
+  font-weight: 300;
   font-style: italic;
 }
 
