--- a/styles.css
+++ b/styles.css
@@ -190,3 +190,10 @@ body {
 .join-now .sign-up {
   border: 2px solid #ffffff;
 }
+
+.footer {
+  color: #ffffff;
+  font-size: 18px;
+  text-align: center;
+  padding: 40px 0;
+}
